a1/brendan_gordon/TEST_PROGRAMS/invalidtype/stefan_knudsen/undeclaredInExpr.min
var x : string;
var y : string;
x = x + y - z;

